--- a/package.json
+++ b/package.json
@@ -14,11 +14,18 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.31.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~49.0.5",
+    "expo-constants": "~14.4.2",
+    "expo-file-system": "~15.4.2",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
+    "expo-secure-store": "~12.3.1",
     "expo-splash-screen": "~0.20.4",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
@@ -26,9 +33,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-maps": "1.7.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
